--- a/ocean-music-player/index.html
+++ b/ocean-music-player/index.html
@@ -65,7 +65,7 @@
 
     <main class="player" role="main">
         <header class="player-header">
-            <h1>🌊 Ocean Music Player</h1>
+            <h1>Music Player</h1>
             <div class="player-status" aria-live="polite" id="statusDisplay">Prêt à naviguer dans vos mélodies</div>
         </header>
 
@@ -78,7 +78,7 @@
                     <div class="disc" id="disc" role="img" aria-label="Pochette d'album">
                         <div class="disc-inner">
                             <div class="disc-center"></div>
-                            <img id="coverImg" class="cover-image" src="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 300 300'><rect width='300' height='300' fill='%23001122'/><text x='150' y='160' text-anchor='middle' fill='%2300CCDD' font-size='60'>🌊</text></svg>" alt="Pochette d'album">
+                            <img id="coverImg" class="cover-image" src="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 300 300'><rect width='300' height='300' fill='%23001122'/><text x='150' y='160' text-anchor='middle' fill='%2300CCDD' font-size='60'></text></svg>" alt="Pochette d'album">
                         </div>
                     </div>
                 </div>
