--- a/ocean-music-player/index.html
+++ b/ocean-music-player/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Lecteur audio moderne avec thème océan - Interface immersive avec animations aquatiques">
     <meta name="theme-color" content="#001122">
-    <title>🌊 Ocean Music Player</title>
+    <title>Music Player</title>
     
     <!-- PWA Manifest -->
     <link rel="manifest" href="manifest.json">
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="styles.css">
     
     <!-- Favicon -->
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🌊</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎵</text></svg>">
 </head>
 <body>
     <!-- Animated Ocean Background -->
@@ -155,8 +155,8 @@
             </header>
             <div id="playlist" class="playlist" role="list">
                 <div class="empty-playlist">
-                    <div class="empty-icon">🌊</div>
-                    <p>Votre océan musical est vide</p>
+                    <div class="empty-icon"></div>
+                    <p>Votre musical est vide</p>
                     <p class="empty-subtitle">Importez vos fichiers audio pour commencer</p>
                 </div>
             </div>
